# vek-torrent

./: .gitignore  .prettierignore  Cargo.toml  LICENSE  README.md  eslint.config.js  index.html  package-lock.json  package.json  tsconfig.app.json  tsconfig.node.json  vite.config.ts
.github/workflows/: ci.yml  release.yml
crates/engine/: Cargo.toml
crates/engine/src/: engine.rs  error.rs  lib.rs  models.rs
crates/qbit/: Cargo.toml
crates/qbit/src/: client.rs  error.rs  lib.rs  models.rs
crates/qbit/tests/: client_tests.rs
crates/rutracker/: Cargo.toml
crates/rutracker/src/: client.rs  encoding.rs  error.rs  lib.rs  models.rs
crates/rutracker/src/parse/: categories.rs  common.rs  login.rs  mod.rs  sanitize.rs  search.rs  text.rs  topic.rs
crates/rutracker/tests/: client_tests.rs
crates/rutracker/tests/fixtures/: search_results.html  topic_page.html
crates/vek-api/: Cargo.toml
crates/vek-api/src/: error.rs  lib.rs  routes.rs
crates/vek-api/tests/: api_tests.rs
crates/vek-core/: Cargo.toml
crates/vek-core/src/: app.rs  config.rs  error.rs  lib.rs  library.rs  models.rs  sidecar.rs  tracked.rs
docs/: ARCHITECTURE.md  SMART-SEARCH.md
scripts/: check-rust-syntax.py  gen-logo.py  release.mjs
src/: App.test.tsx  App.tsx  main.tsx  store.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: commands.rs  error.rs  lib.rs  main.rs  state.rs
src/components/: CaptchaModal.tsx  ContentBlockView.tsx  DownloadMenu.tsx  DownloadModal.tsx  FiltersPanel.tsx  FiltersSidebar.tsx  FolderMenuButton.tsx  ForumTreePicker.tsx  Lightbox.tsx  PageHeader.tsx  PostBody.tsx  ResultRow.tsx  SearchHistory.tsx  ShareButton.tsx  Sidebar.tsx  StatusBar.tsx  SystemSettings.tsx  Toaster.tsx  download-tree.test.ts  ui.tsx
src/hooks/: useAddDownload.ts  useDeepLink.ts  useDownloads.ts  useLibrary.ts  useSearch.ts  useStatus.ts
src/lib/: api.ts  colors.test.ts  colors.ts  filters.test.ts  filters.ts  format.test.ts  format.ts  rutracker.ts  searchHistory.ts  types.ts
src/pages/: CategoriesPage.tsx  DownloadsPage.tsx  ExternalTorrentsPage.tsx  FavoritesPage.tsx  FoldersPage.tsx  HistoryPage.tsx  SearchPage.tsx  SettingsPage.tsx  TopicView.tsx  TrackedHistoryPage.tsx
src/styles/: app.css
