[package]
name = "vek-torrent"
description = "VEK Torrent — поиск по rutracker и встроенный менеджер загрузок"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true

[lib]
name = "vek_torrent_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { workspace = true }

[dependencies]
base64 = { workspace = true }
rutracker = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tauri = { workspace = true }
tauri-plugin-dialog = { workspace = true }
tauri-plugin-opener = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
vek-api = { workspace = true }
vek-core = { workspace = true }

[lints]
workspace = true
