[package]
name = "engine"
description = "Встроенный торрент-движок VEK Torrent на базе librqbit"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true

[dependencies]
librqbit = { workspace = true }
rlimit = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }

[lints]
workspace = true
