[package]
name = "vek-api"
description = "Внешний REST API VEK Torrent (axum + OpenAPI)"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true

[dependencies]
axum = { workspace = true }
base64 = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true }
tower-http = { workspace = true }
tracing = { workspace = true }
utoipa = { workspace = true }
utoipa-axum = { workspace = true }
utoipa-swagger-ui = { workspace = true }
vek-core = { workspace = true }

[dev-dependencies]
tower = { workspace = true, features = ["util"] }

[lints]
workspace = true
