[package]
name = "vek-api"
description = "Внешний REST API VEK Torrent (axum + OpenAPI)"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true

[dependencies]
axum = { workspace = true }
rutracker = { workspace = true }
serde = { workspace = true }
tokio = { workspace = true }
tower-http = { workspace = true }
tracing = { workspace = true }
utoipa = { workspace = true }
utoipa-axum = { workspace = true }
utoipa-swagger-ui = { workspace = true }
vek-core = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }
tower = { workspace = true, features = ["util"] }

[lints]
workspace = true
