[package]
name = "vek-core"
description = "Доменный слой VEK Torrent: конфигурация, сервисы, sidecar qBittorrent"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true

[dependencies]
qbit = { workspace = true }
rutracker = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
uuid = { workspace = true }
which = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }
wiremock = { workspace = true }

[lints]
workspace = true
