[package]
name = "vek-core"
description = "Доменный слой VEK Torrent: конфигурация, сервисы, встроенный движок"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true

[dependencies]
engine = { workspace = true }
rutracker = { workspace = true }
serde = { workspace = true }
sha1_smol = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
utoipa = { workspace = true }
uuid = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }
wiremock = { workspace = true }

[lints]
workspace = true
